[project]
name = "paraglider-tools-mcp"
version = "0.1.0"
description = "MCP Server for various paragliding applications"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
